--- a/src/_component/test/test.pug
+++ b/src/_component/test/test.pug
@@ -1,2 +1,3 @@
-h1 this is a test 
-p I usually use paragraphs when I want to write a more descriptive text related to the subject that I preset
+h1 Prima mea pagina 
+p Versiuna 1.0
+p Start
