--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -1,5 +1,6 @@
 extends ../_component/layout/base
 
 block awesome-content
-  h1 this is awesome
-  p #{data.user.name.first}!!
+  h1 Un buton de kkt
+  //- p #{data.user.name.first}!!
+  include ../_component/buton/buton
