--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,4 @@
 @import '_component/layout/general';
 @import '_component/top-menu/top-menu';
 @import '_component/buton/buton';
+@import '_component/header/header';
