--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -3,4 +3,5 @@ extends ../_component/layout/base
 block awesome-content
   h1 Un buton de kkt
   //- p #{data.user.name.first}!!
-  include ../_component/buton/buton
+  //- include ../_component/buton/buton
+  include ../_component/header/header
