--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -1,3 +1,4 @@
+//mobile
 .header {
   cursor: pointer;
 
@@ -17,7 +18,23 @@
     line-height: 24px;
     display: flex;
     justify-content: center;
-
   }
+}
 
+// tablet
+@media screen and (min-width: 1024px) {
+  .header {
+    &__title {
+      width: 768px;
+    }
+  }
+}
+
+// desktop
+@media screen and (min-width: 1440px) {
+  .header {
+    &__title {
+      width: 1200px;
+    }
+  }
 }
