--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,4 @@
 @import '_component/top-menu/top-menu';
 @import '_component/buton/buton';
 @import '_component/header/header';
+@import '_component/text/text';
