--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -5,3 +5,4 @@ block awesome-content
   //- p #{data.user.name.first}!!
   //- include ../_component/buton/buton
   include ../_component/header/header
+  include ../_component/text/text
