--- a/src/style.scss
+++ b/src/style.scss
@@ -3,3 +3,5 @@
 @import '_component/buton/buton';
 @import '_component/header/header';
 @import '_component/text/text';
+@import '_component/grid/grid';
+
