--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -4,5 +4,7 @@ block awesome-content
   h1 Un buton de kkt
   //- p #{data.user.name.first}!!
   //- include ../_component/buton/buton
-  include ../_component/header/header
-  include ../_component/text/text
+  //- include ../_component/header/header
+  //- include ../_component/text/text
+  include ../_component/grid/grid
+
