feat: missing components of button

--- a/src/_component/buton/buton.pug
+++ b/src/_component/buton/buton.pug
@@ -1,9 +1,9 @@
 button.buton__normal--rosu
   .orice
     .cv-github
-  | salut
+  | Salut
 
 button.buton__normal--verde
   .orice
     .cv-arrow-down
-  | download
+  | Download
