--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,6 @@
-@import '_component/layout/general';
-@import '_component/top-menu/top-menu';
-@import '_component/buton/buton';
-@import '_component/header/header';
-@import '_component/text/text';
-@import '_component/grid/grid';
-
+@import "_component/font/font";
+@import "_component/layout/general";
+@import "_component/buton/buton";
+@import "_component/header/header";
+@import "_component/text/text";
+@import "_component/grid/grid";
