feat: up to date project based on team work

--- a/src/_component/buton/buton.pug
+++ b/src/_component/buton/buton.pug
@@ -1,7 +1,7 @@
 button.buton__normal--rosu
   .orice
-    .cv-github
-  | Salut
+    .cv-youtube
+  | Hello
 
 button.buton__normal--verde
   .orice
