--- a/src/_component/top-menu/top-menu.pug
+++ b/src/_component/top-menu/top-menu.pug
@@ -1,3 +1,10 @@
-h1 Primul meu site 
-p Versiunea 1.0
-p Dai sa mearga
+//- - 
+//-   var {header, paragraph} = data.luni 
+//- h1= header 
+//- //- p= paragraph[1] 
+//- //- p= paragraph[0] 
+//- .buton
+//- each leu, cheie in paragraph 
+//-   div.salut 
+//-     div= cheie 
+//-     p= leu
