--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,9 @@
-@import "_component/font/font";
 @import "_component/layout/general";
 @import "_component/buton/buton";
+@import "_component/font/font";
+@import '_component/top-menu/top-menu';
 @import "_component/header/header";
 @import "_component/text/text";
 @import "_component/grid/grid";
+@import "_component/skill/skill";
+@import "_component/box/box";
