--- a/src/_component/font/font.scss
+++ b/src/_component/font/font.scss
@@ -1,13 +1,11 @@
 @import "variable";
 
 @font-face {
-  font-family: "#{$icomoon-font-family}";
-  src: url("#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?tbo2wj")
-      format("truetype"),
-    url("#{$icomoon-font-path}/#{$icomoon-font-family}.woff?tbo2wj")
-      format("woff"),
-    url("#{$icomoon-font-path}/#{$icomoon-font-family}.svg?tbo2wj##{$icomoon-font-family}")
-      format("svg");
+  font-family: '#{$icomoon-font-family}';
+  src:
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?tbo2wj') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?tbo2wj') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?tbo2wj##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
