--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -1,9 +1,8 @@
 extends ../_component/layout/base
 
 block awesome-content
-  h1 Un buton de kkt
-  //- p #{data.user.name.first}!!
-  include ../_component/buton/buton
   include ../_component/header/header
+  include ../_component/buton/buton
   include ../_component/text/text
   include ../_component/grid/grid
+  include ../_component/skill/skill
