feat: header now takes data from .json

--- a/src/_component/header/header.pug
+++ b/src/_component/header/header.pug
@@ -1,3 +1,5 @@
+-
+  var {sectionTitle} = data.content.welcome
 .header 
   .header__camasa 
-    .header__title Welcome to My CV
+    .header__title= sectionTitle
