--- a/src/_component/test/test.pug
+++ b/src/_component/test/test.pug
@@ -1,2 +1,10 @@
-h1 this is a test 
-p I usually use paragraphs when I want to write a more descriptive text related to the subject that I preset
+-
+  var {jobList} = data.content.experience
+
+each element in jobList 
+  h1= element.jobTitle
+  p= element.workingPeriod 
+  p= element.companyName 
+  p= element.logo
+
+
