feat: multiple components added

--- a/src/_component/text/text.pug
+++ b/src/_component/text/text.pug
@@ -1,16 +1,18 @@
+-
+  var {sectionTitle, nameTitle, jobTitle} = data.content.welcome
 .text
   .text__info-box 
 
     .text__info-box 
-      .text__title Florin Bizgan
+      .text__title= nameTitle
 
     .text__info-box
-      .text__sub-title Padawan
+      .text__sub-title= jobTitle
 
-  .text__gap-8
-    .text__info-box
-      .text__section-title Sumar
+  //- .text__gap-8
+  //-   .text__info-box
+  //-     .text__section-title Summary
 
-    .text__info-box 
-      .text__descriere I am working on improving the candidate's experience during the job search time.
-      .text__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
+  //-   .text__info-box 
+  //-     .text__descriere I am working on improving the candidate's experience during the job search time.
+  //-     .text__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
