--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -2,7 +2,11 @@ extends ../_component/layout/base
 
 block awesome-content
   include ../_component/header/header
-  include ../_component/buton/buton
   include ../_component/text/text
-  include ../_component/grid/grid
+  include ../_component/buton/buton
+  include ../_component/header-2/header-2
+  include ../_component/summary/summary
+  include ../_component/header/header
+  include ../_component/contact/contact
+  include ../_component/social/social
   include ../_component/skill/skill
