--- a/src/_component/contact/contact.pug
+++ b/src/_component/contact/contact.pug
@@ -1,6 +1,10 @@
-
 -
   var {boxContent, socialList, sectionTitle} = data.content.connect
+
+.header 
+  .header__camasa 
+    .header__title Meet me where you are
+//header is hardcode for the moment
 
 .flex-gap16
   .box__gap-8
