--- a/src/_component/skill/skill.pug
+++ b/src/_component/skill/skill.pug
@@ -1,5 +1,12 @@
 -
-  var {skillData, skillBox, legendBox} = data.skill 
+  var {skillData, skillBox, legendBox} = data.skill
+//- include ../header/header
+
+.header 
+  .header__camasa 
+    .header__title Tech I love to work with
+// title is hardcode for the moment
+
 .box__gap-8
   .box__info-box
     .box__section-title= skillBox.title
