--- a/src/_component/social/social.pug
+++ b/src/_component/social/social.pug
@@ -1,11 +1,13 @@
-button.social.round_1
-  .icoana.cv-arrow-down
-button.social.round_2
-  .icoana.cv-home
-button.social.round_3
-  .icoana.cv-menu
-button.social.round_4
-  .icoana.cv-youtube
-
-
-
+.locatie
+  button.social.round_1
+    .icoana
+      .cv-arrow-down
+  button.social.round_2
+    .icoana
+      .cv-home
+  button.social.round_3
+    .icoana
+      .cv-menu
+  button.social.round_4
+    .icoana
+      .cv-youtube
