--- a/src/_component/summary/summary.pug
+++ b/src/_component/summary/summary.pug
@@ -1,16 +1,10 @@
-.text__gap-8
-    .text__info-box
-      .text__section-title Summary
+.text-2
+    .text-2__section-title Summary
+    .text-2__info-box 
+      .text-2__descriere I am working on improving the candidate's experience during the job search time.
+      .text-2__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
+      button.buton__normal--rosu
+        .orice
+          .cv-youtube
+        | Subscribe
 
-    .text__info-box 
-      .text__descriere I am working on improving the candidate's experience during the job search time.
-      .text__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
-
-//temp fix
-br
-br
-button.buton__normal--rosu
-  .orice
-    .cv-youtube
-  | Subscription
-br
