--- a/src/_component/test/test.pug
+++ b/src/_component/test/test.pug
@@ -1,10 +1,16 @@
--
-  var {jobList} = data.content.experience
+include ../reuse/youtube
+//- -
+//-   var {recomandationList} = data.content.recomandations
 
-each element in jobList 
-  h1= element.jobTitle
-  p= element.workingPeriod 
-  p= element.companyName 
-  p= element.logo
+//- each element in recomandationList
+//-   h2= element.image
+//-   p= element.personaName
+//-   p= element.jobTitle
+//-   p= element.review
+//-   //- p= element.color 
+//- //access .json data
+
+
+
 
 
