--- a/src/_component/text/text.pug
+++ b/src/_component/text/text.pug
@@ -2,12 +2,16 @@
   var {sectionTitle, nameTitle, jobTitle} = data.content.welcome
 .text
   .text__info-box 
-
     .text__info-box 
       .text__title= nameTitle
 
     .text__info-box
       .text__sub-title= jobTitle
+
+      button.buton__normal--verde
+        .orice
+          .cv-arrow-down
+        | Download
 
   //- .text__gap-8
   //-   .text__info-box
