--- a/src/style.scss
+++ b/src/style.scss
@@ -9,4 +9,5 @@
 @import "_component/skill/skill";
 @import "_component/box/box";
 @import "_component/social/social";
+@import "_component/summary/summary";
 
