Fixed most of project where margin was present #14

--- a/src/_component/summary/summary.pug
+++ b/src/_component/summary/summary.pug
@@ -3,8 +3,9 @@
     .text-2__info-box 
       .text-2__descriere I am working on improving the candidate's experience during the job search time.
       .text-2__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
+      .divider_top-24 
       button.buton__normal--rosu
         .orice
           .cv-youtube
         | Subscribe
-
+      .divider_bot-40
