--- a/src/_component/text/text.scss
+++ b/src/_component/text/text.scss
@@ -1,11 +1,13 @@
 .text {
   &__title {
     font-size: 24px;
+    padding: 8px;
   }
 
   &__sub-title {
     font-size: 20px;
     font-weight: 900;
+    padding: 8px;
   }
 
   &__section-title {
