--- a/src/style.scss
+++ b/src/style.scss
@@ -10,4 +10,5 @@
 @import "_component/box/box";
 @import "_component/social/social";
 @import "_component/summary/summary";
+@import "_component/reusable/reusable";
 
