--- a/src/_component/buton/buton.scss
+++ b/src/_component/buton/buton.scss
@@ -1,30 +1,41 @@
-%refolosibil {
+%refolosibil, 
+%transparent {
   cursor: pointer;
+  border: 0;
+}
+
+%refolosibil {
   color: white;
   border-radius: 20px;
   height: 35px;
   line-height: 19px;
-  border: 0;
   padding: 8px 16px;
   display: flex;
   gap: 8px;
-  margin-bottom: 57px;
+}
+
+%transparent {
+  padding: 0.75rem; 
 }
 
 .buton {
   &__normal {
     &--rosu {
       @extend %refolosibil;
-      margin-top: 24px;
-      margin-bottom: 32px;
       background-color: #CC0000;
     }
 
     &--verde {
       @extend %refolosibil;
-      margin: 16px 0px 48px 0px;
       
       background-color: #046b2d;
+    }
+
+    &--transparent {
+      background-color: transparent;
+      @extend %transparent;
+      
+      
     }
   }
 }
