Feat: added youtube icon fix #15

--- a/src/_component/contact/contact.pug
+++ b/src/_component/contact/contact.pug
@@ -4,7 +4,12 @@
 .header 
   .header__camasa 
     .header__title Meet me where you are
-//header is hardcode for the moment
+
+.text
+  .text__info-box 
+    button.buton__normal--transparent 
+      .orice 
+        .cv-youtube
 
 .flex-gap16
   .box__gap-8
