--- a/src/_component/text/text.pug
+++ b/src/_component/text/text.pug
@@ -13,12 +13,4 @@
       .orice
         .cv-arrow-down
       | Download
-  .divider
-
-  //- .text__gap-8
-  //-   .text__info-box
-  //-     .text__section-title Summary
-
-  //-   .text__info-box 
-  //-     .text__descriere I am working on improving the candidate's experience during the job search time.
-  //-     .text__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
+  .divider-48
