--- a/src/_component/reusable/reusable.scss
+++ b/src/_component/reusable/reusable.scss
@@ -10,12 +10,12 @@ a {
   text-decoration: none;
 }
 
-.divider {
+.divider-48 {
   height: 48px;
 }
 
-.divider_bot-40 {
-  height: 40px;
+.divider_bot-32 {
+  height: 32px;
 }
 
 .divider_top-24 {
