Feat: box shadow created fix #18

--- a/src/_component/box/box.scss
+++ b/src/_component/box/box.scss
@@ -19,13 +19,15 @@
   &__info-box {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 8px;
     padding: 8px;
+    margin: none;
   }
   
   &__info-box-shadow {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 1rem;
+    border-radius: 16px;
     border: 1px solid #e3e6ef;
   }
 
