--- a/src/_component/reusable/reusable.scss
+++ b/src/_component/reusable/reusable.scss
@@ -14,10 +14,14 @@ a {
   height: 48px;
 }
 
-.divider_bot-32 {
-  height: 32px;
+.divider-16 {
+  height: 16px;
 }
 
 .divider_top-24 {
   height: 24px
+}
+
+.divider_bot-32 {
+  height: 32px;
 }
