--- a/src/_component/social/social.pug
+++ b/src/_component/social/social.pug
@@ -11,3 +11,15 @@
   button.social.round_4
     .icoana
       .cv-youtube
+
+.divider_top-24
+.box__info-box-shadow
+  p.text I am working on improving the candidate's experience during the job search time. I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps. Lets have a chat!
+
+.divider-16
+.text__info-box 
+  button.buton__normal--rosu
+    .orice
+      .cv-youtube
+    | Subscribe
+.divider-48
