--- a/src/_component/test/test.pug
+++ b/src/_component/test/test.pug
@@ -1,14 +1,16 @@
 include ../reuse/youtube
-//- -
-//-   var {recomandationList} = data.content.recomandations
+-
+  //- var {skillBox} = data.skill
+  const {sectionTitle} = data.skill.skillBox
 
-//- each element in recomandationList
-//-   h2= element.image
-//-   p= element.personaName
-//-   p= element.jobTitle
-//-   p= element.review
-//-   //- p= element.color 
-//- //access .json data
+
+h2= sectionTitle
+h1 helooooo
+  //- p= element.personaName
+  //- p= element.jobTitle
+  //- p= element.review
+  //- p= element.color 
+//access .json data
 
 
 
