--- a/src/_component/box/box.scss
+++ b/src/_component/box/box.scss
@@ -25,6 +25,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
     border: 1px solid #e3e6ef;
+    font-size: 16px;
   }
 
   &__descriere {
