Feat: added link to YouTube logo

--- a/src/_component/contact/contact.pug
+++ b/src/_component/contact/contact.pug
@@ -9,7 +9,8 @@
   .text__info-box 
     button.buton__normal--transparent 
       .orice 
-        .cv-youtube
+        a(href="https://www.youtube.com/watch?v=wGrxMUGngnk&ab_channel=DJSkandalous" title="Motivational Training" target="_blank")
+          .cv-youtube
 
 .flex-gap16
   .box__gap-8
