--- a/src/_component/skill/skill.pug
+++ b/src/_component/skill/skill.pug
@@ -12,7 +12,8 @@
   .text__info-box 
     button.buton__normal--transparent
       .orice
-        .cv-youtube
+        a(href="https://www.youtube.com/watch?v=wGrxMUGngnk&ab_channel=DJSkandalous" title="Motivational Training" target="_blank")
+          .cv-youtube
 .divider_top-24
 .box__gap-8
   .box__info-box
