--- a/src/_component/text/text.pug
+++ b/src/_component/text/text.pug
@@ -4,7 +4,8 @@
   .text__info-box 
     button.buton__normal--transparent 
       .orice 
-        .cv-youtube
+        a(href="https://www.youtube.com/watch?v=wGrxMUGngnk&ab_channel=DJSkandalous" title="Motivational Training" target="_blank")
+          .cv-youtube
     .text__title= nameTitle
 
     .text__sub-title= jobTitle
