--- a/src/_component/social/social.pug
+++ b/src/_component/social/social.pug
@@ -1,14 +1,14 @@
 .locatie
-  button.social.round_1
+  button.social.facebook
     .icoana
       .cv-arrow-down
-  button.social.round_2
+  button.social.github
     .icoana
       .cv-home
-  button.social.round_3
+  button.social.youtube
     .icoana
       .cv-menu
-  button.social.round_4
+  button.social.linkedin
     .icoana
       .cv-youtube
 
