--- a/src/_component/social/social.scss
+++ b/src/_component/social/social.scss
@@ -4,17 +4,18 @@
   width: 64px;
   border-radius: 32px;
   border-color: ghostwhite;
+  // border: none;
 }
-.round_1 {
+.facebook {
   background: linear-gradient(#046B2D, #5C8470);
 }
-.round_2 {
+.github {
   background-color: #6B0404;
 }
-.round_3 {
+.youtube {
   background-color: #37046B;
 }
-.round_4 {
+.linkedin {
   background-color: #16A9C9;
 }
 
