Fix header issue Fixes #17

--- a/src/_component/summary/summary.pug
+++ b/src/_component/summary/summary.pug
@@ -1,3 +1,6 @@
+.header 
+  .header__orange-wrap 
+    .header__orange-front= sectionTitle
 .text-2
     .text-2__section-title Summary
     .text-2__info-box 
