--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -4,7 +4,8 @@ block awesome-content
   include ../_component/header/header
   include ../_component/text/text
   //- include ../_component/buton/buton
-  include ../_component/header-2/header-2
+  //- include ../_component/header-2/header-2
+  //- include ../_component/header/header
   include ../_component/summary/summary
   include ../_component/contact/contact
   include ../_component/social/social
