--- a/src/_component/header-2/header-2.scss
+++ b/src/_component/header-2/header-2.scss
@@ -4,7 +4,7 @@
   cursor: pointer;
 
   &__camasa-2 {
-    
+    // height removed since it takes height of content
     background-color: rgba(204, 128, 15, 0.6);
     display: flex;
     justify-content: center;
