--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -21,12 +21,36 @@
     justify-content: center;
     transition: 250ms; // animation to be removed if required
   }
+
+  &__orange-wrap {
+    background-color: rgba(204, 128, 15, 0.6);
+    display: flex;
+    justify-content: center;
+    height: auto;
+    font-size: 16px;
+    width: 400;
+  }
+
+  &__orange-front {
+    background-color: rgba(204, 128, 15, 1);
+    width: 304px;
+    color: white;
+    font-size: 24px;
+    padding: 8px;
+    line-height: 24px;
+    display: flex;
+    justify-content: center;
+    transition: 250ms; // animation to be removed if required
+    font-size: 16px;
+    width: 400;
+  }
 }
 
 // tablet
 @media screen and (min-width: 1024px) {
   .header {
-    &__title {
+    &__title,
+    &__orange-front {
       width: 768px;
     }
   }
@@ -35,7 +59,8 @@
 // desktop
 @media screen and (min-width: 1440px) {
   .header {
-    &__title {
+    &__title, 
+    &__orange-front {
       width: 1200px;
     }
   }
