--- a/src/_component/summary/summary.pug
+++ b/src/_component/summary/summary.pug
@@ -1,11 +1,13 @@
+-
+  var {sectionTitle, description, nameTitle} = data.content.summary
 .header 
   .header__orange-wrap 
     .header__orange-front= sectionTitle
 .text-2
-    .text-2__section-title Summary
+    .text-2__section-title= nameTitle
     .text-2__info-box 
-      .text-2__descriere I am working on improving the candidate's experience during the job search time.
-      .text-2__descriere I work every day with Remix, React, Hooks, Redux, NextJS, and Firebase with JavaScript and TypeScript to create amazing Apps.
+      each text in description
+        .text-2__descriere= text
       .divider_top-24 
       button.buton__normal--rosu
         .orice
