--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -27,8 +27,8 @@
     display: flex;
     justify-content: center;
     height: auto;
-    font-size: 16px;
-    width: 400;
+    // font-size: 16px;
+    // width: 400;
   }
 
   &__orange-front {
@@ -40,9 +40,9 @@
     line-height: 24px;
     display: flex;
     justify-content: center;
+    align-items: center;
     transition: 250ms; // animation to be removed if required
     font-size: 16px;
-    width: 400;
   }
 }
 
