Feat: created main page dir

--- a/src/test/index.pug
+++ b/src/test/index.pug
@@ -7,3 +7,5 @@ block awesome-content
   include ../_component/contact/contact
   include ../_component/social/social
   include ../_component/skill/skill
+  //- include ../_component/welcome/welcome 
+
