Feat: social partly implemented

--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -30,9 +30,30 @@
     // font-size: 16px;
     // width: 400;
   }
-
+  
   &__orange-front {
     background-color: rgba(204, 128, 15, 1);
+    width: 304px;
+    color: white;
+    font-size: 24px;
+    padding: 8px;
+    line-height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 250ms; // animation to be removed if required
+    font-size: 16px;
+  }
+  
+  &__blue-wrap {
+    background-color: rgba(15, 102, 204, 0.6);
+    display: flex;
+    justify-content: center;
+    height: auto;
+  }
+  
+  &__blue-front {
+    background-color: rgba(15, 102, 204, 1);
     width: 304px;
     color: white;
     font-size: 24px;
