--- a/src/_component/social/social.scss
+++ b/src/_component/social/social.scss
@@ -6,18 +6,18 @@
   border-color: ghostwhite;
   // border: none;
 }
-.facebook {
-  background: linear-gradient(#046B2D, #5C8470);
-}
-.github {
-  background-color: #6B0404;
-}
-.youtube {
-  background-color: #37046B;
-}
-.linkedin {
-  background-color: #16A9C9;
-}
+// .facebook {
+//   background: linear-gradient(#046B2D, #5C8470);
+// }
+// .github {
+//   background-color: #6B0404;
+// }
+// .youtube {
+//   background-color: #37046B;
+// }
+// .linkedin {
+//   background-color: #16A9C9;
+// }
 
 .icoana {
   color: white;
