--- a/src/_component/font/variable.scss
+++ b/src/_component/font/variable.scss
@@ -1,17 +1,47 @@
 $icomoon-font-family: "cv" !default;
 $icomoon-font-path: "/asset/font" !default;
 
-$cv-cup-half: "\e908";
-$cv-medal: "\e909";
-$cv-trophy-2: "\e90a";
-$cv-trophy-1: "\e90b";
-$cv-trophy-3: "\e90c";
-$cv-cup-full: "\e90d";
-$cv-piggy-bank: "\e914";
-$cv-arrow-down: "\e901";
-$cv-email: "\e902";
-$cv-github: "\e903";
-$cv-cross: "\e904";
-$cv-menu: "\e905";
-$cv-home: "\e906";
-$cv-youtube: "\e907";
+$cv-linkedin-square: "\e901";
+$cv-linkedin: "\e902";
+$cv-gmail: "\e903";
+$cv-stackoverflow: "\e904";
+$cv-udemy: "\e905";
+$cv-linkedin1: "\e906";
+$cv-github: "\e907";
+$cv-visualstudiocode: "\e908";
+$cv-codewars: "\e909";
+$cv-home: "\e900";
+$cv-play: "\e912";
+$cv-coin-dollar: "\e93b";
+$cv-coin-euro: "\e93c";
+$cv-coin-pound: "\e93d";
+$cv-coin-yen: "\e93e";
+$cv-trophy: "\e99e";
+$cv-menu: "\e9bd";
+$cv-cross: "\ea0f";
+$cv-arrow-down: "\ea36";
+$cv-checkbox-checked: "\ea52";
+$cv-amazon: "\ea87";
+$cv-google: "\ea88";
+$cv-facebook: "\ea90";
+$cv-facebook2: "\ea91";
+$cv-instagram: "\ea92";
+$cv-whatsapp: "\ea93";
+$cv-spotify: "\ea94";
+$cv-telegram: "\ea95";
+$cv-twitter: "\ea96";
+$cv-youtube: "\ea9d";
+$cv-youtube2: "\ea9e";
+$cv-steam: "\eaac";
+$cv-steam2: "\eaad";
+$cv-dropbox: "\eaae";
+$cv-github1: "\eab0";
+$cv-windows: "\eac1";
+$cv-windows8: "\eac2";
+$cv-skype: "\eac5";
+$cv-linkedin2: "\eac9";
+$cv-linkedin21: "\eaca";
+$cv-stackoverflow1: "\ead0";
+$cv-firefox: "\eada";
+$cv-opera: "\eade";
+$cv-html-five: "\eae4";
