--- a/src/_component/font/variable.scss
+++ b/src/_component/font/variable.scss
@@ -1,8 +1,13 @@
 $icomoon-font-family: "cv" !default;
 $icomoon-font-path: "/asset/font" !default;
 
+$cv-figma: "\e90a";
 $cv-linkedin-square: "\e901";
 $cv-linkedin: "\e902";
+$cv-figma1: "\e90b";
+$cv-windows: "\e90c";
+$cv-twitch: "\e90d";
+$cv-facebook: "\e90e";
 $cv-gmail: "\e903";
 $cv-stackoverflow: "\e904";
 $cv-udemy: "\e905";
@@ -23,7 +28,7 @@ $cv-arrow-down: "\ea36";
 $cv-checkbox-checked: "\ea52";
 $cv-amazon: "\ea87";
 $cv-google: "\ea88";
-$cv-facebook: "\ea90";
+$cv-facebook1: "\ea90";
 $cv-facebook2: "\ea91";
 $cv-instagram: "\ea92";
 $cv-whatsapp: "\ea93";
@@ -36,7 +41,7 @@ $cv-steam: "\eaac";
 $cv-steam2: "\eaad";
 $cv-dropbox: "\eaae";
 $cv-github1: "\eab0";
-$cv-windows: "\eac1";
+$cv-windows1: "\eac1";
 $cv-windows8: "\eac2";
 $cv-skype: "\eac5";
 $cv-linkedin2: "\eac9";
