--- a/src/_component/summary/summary.scss
+++ b/src/_component/summary/summary.scss
@@ -1,6 +1,6 @@
-.text-2 {
+.text {
   &__title {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   &__sub-title {
@@ -9,11 +9,12 @@
   }
 
   &__section-title {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     font-style: italic;
     width: 100%;
     padding: 8px;
+    font-weight: 700;
   }
 
   &__info-box {
@@ -27,12 +28,13 @@
   &__descriere {
     display: flex;
     width: 100%;
+    font-size: 16px;
   }
 
-  &__gap-8 {
-    display: flex;
-    width: 100%;
-    gap: 8px;
-    flex-direction: column;
-  }
+  // &__gap-8 {
+  //   display: flex;
+  //   width: 100%;
+  //   gap: 8px;
+  //   flex-direction: column;
+  // }
 }
