--- a/src/_component/text/text.scss
+++ b/src/_component/text/text.scss
@@ -1,4 +1,5 @@
-.text {
+.text,
+.box {
   &__title {
     font-size: 24px;
     padding: 8px;
@@ -27,6 +28,7 @@
   &__descriere {
     display: flex;
     width: 100%;
+    font-size: 16px;
   }
 
   &__gap-8 {
